fixed image overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -21,30 +22,36 @@ header h1 {
   border-radius: 36px;
 }
 
-.banner {
+section.banner {
   position: relative;
 }
 
-.banner img {
+section.banner img {
+  max-width: 100%;
+  display: block;
+}
+
+img[src="images/old-school-cassettes.jpg"] {
   max-width: 100%;
 }
 
-.banner .welcome-message {
+section.banner .welcome-message {
   position: absolute;
   top: 30%;
   right: 0;
-  background-color: rgb(47, 25, 25, .7);
+  background-color: rgb(47, 25, 25, 0.7);
   color: white;
   padding: 20px;
 }
 
 nav {
-  max-width: 100%;
+  width: 100%;
   background-color: rgb(155, 113, 37);
   color: white;
   padding: 10px;
   position: sticky;
-  top: 115px;
+  top: 75px;
+  z-index: 1;
 }
 
 nav ul {
@@ -65,7 +72,7 @@ nav li a {
 }
 
 nav li a:hover {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
 main {
@@ -87,29 +94,28 @@ main {
 }
 
 #arrow {
-font-size: 40px;
-font-weight: bold;
-color: antiquewhite;
-position: absolute;
-bottom: 5px;
-right: 20px;
-padding-left: 20px;
-padding-right: 70px;
+  font-size: 40px;
+  font-weight: bold;
+  color: antiquewhite;
+  position: absolute;
+  bottom: 5px;
+  right: 20px;
+  padding-left: 20px;
+  padding-right: 70px;
 }
 
-section {
+section.container-sale {
   background-color: aqua;
 }
 
-aside {
-  background-color: aquamarine;
+section.info {
+  background-color: aqua;
 }
 
-@media (max-width: 1000px) {
-
+@media screen and (max-width: 1000px) {
   .banner .welcome-message {
-    padding: 5px;
-    font-size: 10px;
+    padding: 7px;
+    font-size: 13px;
     top: 40%;
   }
 
@@ -122,15 +128,17 @@ aside {
     padding: 6px 9px;
     font-size: 20px;
   }
-
 }
 
-@media (max-width: 600px) {
-
+@media screen and (max-width: 600px) {
   .banner .welcome-message {
-    padding: 3px;
-    font-size: 7px;
-    top: 40%;
+    max-width: 100%;
+    width: 00px;
+    margin: 0 auto;
+    padding: 2px;
+    font-size: 8px; /*Change to vw - viewport width */
+    top: 75%;
+    text-align: center;
   }
 
   header {
@@ -144,7 +152,18 @@ aside {
   }
 
   nav {
-    font-size: 12px;
+    top: 0px;
   }
 
+  nav li {
+    font-size: 20px;
+    display: block;
+    width: 100%;
+    margin: 12px auto;
+    text-align: center;
+  }
+
+  header {
+    position: relative;
+  }
 }
